--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,13 @@
 
   <body>
     <%= render 'layouts/navbar' %>
-    <%= render 'layouts/messages' %>
-    <%= yield %>
+    <div class="container mt-4">
+        <%= render 'layouts/messages' %>
+        <div class="row justify-content-center">
+          <div class="col-9">
+            <%= yield %>
+          </div>
+        </div>
+    </div>
   </body>
 </html>
