--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -2,7 +2,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
     <% if user_signed_in? %>
-      <!-- Left-aligned navbar when signed in -->
       <%= link_to "NCCT", root_path, class: "navbar-brand fs-3 fw-bold" %>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" 
               aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,7 +35,7 @@
           
           <!-- Transactions -->
           <li class="nav-item">
-            <%= link_to "Transactions", main_account_transactions_path(current_user.main_accounts.first), class: "nav-link #{'active' if current_page?(main_account_transactions_path(current_user.main_accounts.first))}" %>
+            <%= link_to "Transactions", transactions_path, class: "nav-link #{'active' if current_page?(transactions_path)}" %>
           </li>
           
           <!-- Profile Dropdown -->
@@ -66,7 +65,6 @@
         </ul>
       </div>
     <% else %>
-      <!-- Centered brand when not signed in -->
       <div class="w-100 text-center">
         <%= link_to "NCCT", root_path, class: "navbar-brand fs-3 fw-bold" %>
       </div>
@@ -74,10 +72,7 @@
               aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-
-      <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
-        <!-- No Login & Sign Up links in navbar -->
-      </div>
+      <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent"></div>
     <% end %>
   </div>
 </nav>
