--- a/app/views/shared_main_account_users/_form.html.erb
+++ b/app/views/shared_main_account_users/_form.html.erb
@@ -1,8 +1,9 @@
 <%= form_with(model: [@main_account, shared_main_account_user], local: true) do |form| %>
   <% if shared_main_account_user.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(shared_main_account_user.errors.count, "error") %> prohibited this Partner from being saved:</h2>
-
+    <div id="error_explanation" class="alert alert-danger">
+      <h2>
+        <%= pluralize(shared_main_account_user.errors.count, "error") %> prohibited this Partner from being saved:
+      </h2>
       <ul>
         <% shared_main_account_user.errors.full_messages.each do |message| %>
           <li><%= message %></li>
@@ -11,12 +12,14 @@
     </div>
   <% end %>
 
-  <div>
-    <%= form.label :user_id, "Partner Email" %><br>
-    <%= form.collection_select :user_id, User.where.not(id: @main_account.owner_id).where.not(id: @main_account.shared_main_accounts.pluck(:id)).distinct, :id, :email, prompt: "Select a User" %>
+  <div class="form-group">
+    <%= form.label :user_id, "Partner Email" %>
+    <%= form.collection_select :user_id, User.where.not(id: @main_account.owner_id)
+                                             .where.not(id: @main_account.shared_main_account_users.pluck(:user_id))
+                                             .distinct, :id, :email, prompt: "Select a User", class: "form-control" %>
   </div>
 
-  <div>
-    <%= form.submit %>
+  <div class="form-group">
+    <%= form.submit "Add Partner", class: "btn btn-primary" %>
   </div>
 <% end %>
