--- a/app/views/transactions/new.html.erb
+++ b/app/views/transactions/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', transaction: @transaction, account: @account %>
 
-<%= link_to "Back", account_transactions_path(@account) %>
+<%= link_to "Back", transactions_path, class: "btn btn-secondary" %>
