--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -1,2 +1,10 @@
-@import 'bootstrap/scss/bootstrap';
-@import 'bootstrap-icons/font/bootstrap-icons';
+@import "bootstrap/scss/bootstrap";
+@import "bootstrap-icons/font/bootstrap-icons";
+
+@media (max-width: 991.98px) {
+  /* Adjust for smaller screens (bootstrap lg breakpoint) */
+  .navbar .dropdown-menu-end {
+    max-width: 150px; /* Set your desired width */
+    width: auto; /* Allow it to shrink to content size */
+  }
+}
