--- a/app/views/sub_accounts/_form.html.erb
+++ b/app/views/sub_accounts/_form.html.erb
@@ -1,9 +1,8 @@
-<%= form_with(model: [@main_account, sub_account], local: true) do |form| %>
+<%= form_with(model: [@main_account, sub_account], local: true, data: { turbo: false }, class: "needs-validation") do |form| %>
   <% if sub_account.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(sub_account.errors.count, "error") %> prohibited this SubAccount from being saved:</h2>
-
-      <ul>
+    <div class="alert alert-danger">
+      <h4 class="alert-heading"><%= pluralize(sub_account.errors.count, "error") %> prohibited this SubAccount from being saved:</h4>
+      <ul class="mb-0">
         <% sub_account.errors.full_messages.each do |message| %>
           <li><%= message %></li>
         <% end %>
@@ -11,22 +10,48 @@
     </div>
   <% end %>
 
-  <div>
-    <%= form.label :title %><br>
-    <%= form.text_field :title %>
+  <div class="mb-3">
+    <%= form.label :title, class: "form-label" %>
+    <%= form.text_field :title, class: "form-control", autofocus: true %>
   </div>
 
-  <div>
-    <%= form.label :description %><br>
-    <%= form.text_area :description %>
+  <div class="mb-3">
+    <%= form.label :description, class: "form-label" %>
+    <%= form.text_area :description, class: "form-control", rows: 4 %>
   </div>
 
-  <div>
-    <%= form.label :percentage %><br>
-    <%= form.number_field :percentage, step: 0.01 %>
+  <div class="mb-3">
+    <%= form.label :percentage, "Allocation Percentage", class: "form-label" %>
+    <div class="d-flex align-items-center">
+      <input
+        id="percentage-slider"
+        type="range"
+        class="form-range me-3"
+        min="0"
+        max="<%= @main_account.available_percentage %>"
+        step="1"
+        value="<%= sub_account.percentage || 0 %>"
+        oninput="document.getElementById('percentage-value').value = this.value"
+        name="sub_account[percentage]"
+      >
+      <input
+        id="percentage-value"
+        type="number"
+        class="form-control"
+        style="width: 100px;"
+        min="0"
+        max="<%= @main_account.available_percentage %>"
+        step="1"
+        value="<%= sub_account.percentage || 0 %>"
+        oninput="document.getElementById('percentage-slider').value = this.value"
+      >
+      <span class="ms-2">%</span>
+    </div>
+    <small class="text-muted">Select a percentage between 0% and <%= @main_account.available_percentage %>%.</small>
   </div>
 
-  <div>
-    <%= form.submit %>
+  <div class="d-flex justify-content-between">
+    <%= form.submit "Save SubAccount", class: "btn btn-primary" %>
+    <%= link_to "Cancel", main_account_sub_accounts_path(@main_account), class: "btn btn-secondary" %>
   </div>
 <% end %>
