--- a/app/views/sub_accounts/edit.html.erb
+++ b/app/views/sub_accounts/edit.html.erb
@@ -1,6 +1,4 @@
-<h1><%= action_name.capitalize %> SubAccount</h1>
-
+<h1 class="mb-4">Edit <%= @sub_account.title %></h1>
 <%= render 'form', sub_account: @sub_account %>
 
-<%= link_to "Back", main_account_sub_accounts_path(@main_account) %>
 
