add transaction views

--- a/app/views/shared_main_account_users/index.html.erb
+++ b/app/views/shared_main_account_users/index.html.erb
@@ -1,7 +1,7 @@
-<h1 class="mb-4">Partners for <%= @main_account.title %></h1>
+<h1>Partners</h1>
 <% if @shared_users.empty? %>
   <div class="alert alert-info mb-3">
-    No partners have been added yet.
+    <i class="fas fa-info-circle me-2"></i>No partners have been added yet.
   </div>
 <% end %>
 
