--- a/app/views/sub_accounts/index.html.erb
+++ b/app/views/sub_accounts/index.html.erb
@@ -1,8 +1,8 @@
-<h1 class="mb-4">SubAccounts for <%= @main_account.title %></h1>
+<h1>Accounts</h1>
 
 <% if @sub_accounts.empty? %>
   <div class="alert alert-info">
-    No SubAccounts added yet.
+    <i class="fas fa-info-circle me-2"></i>No SubAccounts added yet.
   </div>
 <% end %>
 
