--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,6 +1,7 @@
-<div class="row justify-content-center">
+<h1>Edit <%= resource_name.to_s.humanize %></h1>
+<div class="row">
   <div class="col-md-9 col-sm-12">
-    <h2 class="mb-4">Edit <%= resource_name.to_s.humanize %></h2>
+
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, class: "needs-validation" }) do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
