--- a/app/views/main_accounts/show.html.erb
+++ b/app/views/main_accounts/show.html.erb
@@ -1,4 +1,4 @@
-<h1 class="mb-4"><%= @main_account.title %></h1>
+<h1><%= @main_account.title %></h1>
 
 <div class="card mb-4">
   <div class="card-body">
