--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,5 +1,3 @@
-<h1><%= action_name.capitalize %> Category</h1>
+<h1><%= "#{action_name.capitalize} Category for #{@sub_account.title}" %></h1>
 
 <%= render 'form', category: @category %>
-
-<%= link_to "Back", main_account_sub_account_categories_path(@main_account, @sub_account) %>
